fixed cascading errors in style.cs

--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -2,13 +2,13 @@ body{
   font-family:Arial, Helvetica, sans-serif
 }
 
-.para,
-.small-para {
+.para {
   color: hsl(0, 0%, 0%);
   font-weight: 800;
 }
 
-.small-para {
+.para.small-para {
+  color: hsl(0, 0%, 0%);
   font-size: 14px;
   font-weight: 800;
 }
@@ -29,7 +29,11 @@ body{
   font-size: 20px;
 }
 
-.child {
+#confirm-button{
+  background-color: green;
+}
+
+div.text.child {
   color: rgb(0, 0, 0);
   font-weight: 800;
   font-size: 14px;
