--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -9,9 +9,37 @@ body {
 }
 
 .header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+}
+
+.left-items{
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+}
+
+.right-items{
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+}
+
+.links{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding-left: 5px;
+}
+
+li {
+  padding-left: 10px;
+  padding-right: 0;
 }
 
 .profile-image {
@@ -20,6 +48,7 @@ body {
   border-radius: 50%;
   width: 48px;
   height: 48px;
+  margin-right: 5px;
 }
 
 .logo {
@@ -27,6 +56,7 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+  margin-left: 10px;
 }
 
 button {
@@ -35,6 +65,9 @@ button {
   background: rebeccapurple;
   color: white;
   padding: 8px 24px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-right: 10px;
 }
 
 a {
