added flex box to style.css

--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -20,6 +20,29 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+
+.middle-row{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.text{
+  margin-bottom: 10px;
+}
+
+.header{
+  margin-top: 10px;
+  margin-bottom: 10px;
+  font-weight: bold;
+  font-size: 24px;
 }
 
 .icon {
@@ -31,7 +54,10 @@ body {
   height: 42px;
   border-radius: 50%;
   display: flex;
+  flex: 1 0 auto;
   align-items: center;
+  margin-top: 5px;
+  margin-left: 5px;
   justify-content: center;
 }
 
@@ -44,9 +70,12 @@ body {
   height: 24px;
   width: 24px;
   display: flex;
+  flex: 1 0 auto;
   align-items: center;
   justify-content: center;
   border: 1px solid #eee;
+  margin-top: 5px;
+  margin-right: 5px;
   padding: 0;
 }
 
@@ -54,6 +83,12 @@ button {
   cursor: pointer;
   padding: 8px 16px;
   border-radius: 8px;
+}
+
+.buttons{
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 10px;
 }
 
 button.continue {
