added flex box to syle.css to move the icon, search bar, and buttons to the center. removed ble text and underline from links. removed bullet points from list items. made footer.

--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -25,3 +25,43 @@ input {
   width: 400px;
   margin-bottom: 16px;
 }
+
+.content {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer {
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-between;
+  background-color: lightgray;
+}
+
+ul{
+  display: flex;
+  padding-left: 10px;
+}
+
+li {
+  list-style-type: none;
+  margin-right: 15px;
+  margin-left: 0px;
+}
+
+a {
+  text-decoration: none;
+  color: gray;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
